--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ p</code></pre>
 <div id="share" class="section level3">
 <h3>5.(S)hare</h3>
 <p>After analyzing the data, R Markdown language was used to create this
-presentation that is shared on <a href="https://github.com/marcuscrodriguez/marcusc.git">git@github.com:marcuscrodriguez/marcusc.git</a>
+presentation that is shared on <a href="https://marcuscrodriguez.github.io/marcusc.github.io/">https://marcuscrodriguez.github.io/marcusc.github.io/</a>
 and on my personal website <a href="https://www.marcusc.com">www.marcusc.com</a>.</p>
 <p>*Based on the analysis of data covering twenty-two years, there are
 no increases in homicides that may be attributed to the full phase of
